TensorFlow_logs/logs_control_flow_test_control_flow/log46.log
2020-10-06 16:39:57.541168: I tensorflow/stream_executor/platform/default/dso_loader.cc:44] Successfully opened dynamic library cudart64_100.dll
Traceback (most recent call last):
  File "control_flow_test.py", line 24, in <module>
    from tensorflow.python.autograph.converters import control_flow
  File "C:\ProgramData\Anaconda3\envs\keras\lib\site-packages\tensorflow\__init__.py", line 99, in <module>
    from tensorflow_core import *
  File "C:\ProgramData\Anaconda3\envs\keras\lib\site-packages\tensorflow_core\__init__.py", line 28, in <module>
    from tensorflow.python import pywrap_tensorflow  # pylint: disable=unused-import
  File "<frozen importlib._bootstrap>", line 1007, in _handle_fromlist
  File "C:\ProgramData\Anaconda3\envs\keras\lib\site-packages\tensorflow\__init__.py", line 50, in __getattr__
    module = self._load()
  File "C:\ProgramData\Anaconda3\envs\keras\lib\site-packages\tensorflow\__init__.py", line 44, in _load
    module = _importlib.import_module(self.__name__)
  File "C:\ProgramData\Anaconda3\envs\keras\lib\importlib\__init__.py", line 126, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
  File "C:\ProgramData\Anaconda3\envs\keras\lib\site-packages\tensorflow_core\python\__init__.py", line 73, in <module>
    from tensorflow.python.ops.standard_ops import *
  File "C:\ProgramData\Anaconda3\envs\keras\lib\site-packages\tensorflow_core\python\ops\standard_ops.py", line 25, in <module>
    from tensorflow.python import autograph
  File "C:\ProgramData\Anaconda3\envs\keras\lib\site-packages\tensorflow_core\python\autograph\__init__.py", line 35, in <module>
    from tensorflow.python.autograph import operators
  File "C:\ProgramData\Anaconda3\envs\keras\lib\site-packages\tensorflow_core\python\autograph\__init__.py", line 39, in <module>
    from tensorflow.python.autograph.impl.api import AutoGraphError
  File "C:\ProgramData\Anaconda3\envs\keras\lib\site-packages\tensorflow_core\python\autograph\impl\api.py", line 38, in <module>
    from tensorflow.python.autograph.impl import conversion
  File "C:\ProgramData\Anaconda3\envs\keras\lib\site-packages\tensorflow_core\python\autograph\impl\conversion.py", line 40, in <module>
    from tensorflow.python.autograph.converters import control_flow
  File "C:\ProgramData\Anaconda3\envs\keras\lib\site-packages\tensorflow_core\python\autograph\converters\control_flow.py", line 127
    return {s for s not in modified_live if not s.is_composite()}
                      ^
SyntaxError: invalid syntax
